--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "nba-api-client": "^1.0.9"
   },
   "bugs": {
     "url": "https://github.com/Arnette110/Trade-and-Play/issues"
