--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: node_js
-node_js: "12"
+node_js: 
+  - "stable"
 branches:
   only:
     - master
-  cache:
+cache:
     directories:
      - node_modules
+script: 
+  - npm run build
+  - npm test
