--- a/package.json
+++ b/package.json
@@ -39,11 +39,19 @@
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "axios": "^0.19.2",
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.7",
     "nba-api-client": "^1.0.9",
-    "react-card-flip": "^1.0.10"
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "react-card-flip": "^1.0.10",
+    "method-override": "^3.0.0"
   },
   "bugs": {
     "url": "https://github.com/Arnette110/Trade-and-Play/issues"
