--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
-    "@material-ui/core": "^4.9.9",
+    "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "auth0-js": "^9.13.2",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
+    "formik-material-ui": "^2.0.0-beta.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
